fix(ix/choice): avoid border overflow

--- a/client/src/lit/interactive-example/index.scss
+++ b/client/src/lit/interactive-example/index.scss
@@ -180,7 +180,6 @@ tab-wrapper {
     "choice runner";
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: max-content 1fr;
-  height: 100%;
 
   @media (max-width: $screen-lg) {
     grid-template-areas: "header" "choice" "runner";
